<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_login_background"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="#32383838"
        android:paddingTop="20dp"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:src="@drawable/ic_keyboard_arrow_left_grey_900_24dp" />

        </FrameLayout>
    </android.support.v7.widget.Toolbar>


    <ImageView
        android:id="@+id/iv_logo_login"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:layout_marginTop="10dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_login_logo2" />


    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    <android.support.v4.view.ViewPager
        android:id="@+id/viewpager_login"
        android:layout_width="260dp"
        android:layout_height="150dp"
        android:layout_gravity="center" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="5dp"
        android:background="@drawable/shape_login_input"
        android:text="登录"
        android:textColor="@color/lightgray"
        android:textSize="16sp" />


    <TextView
        android:id="@+id/tv_one_key_login"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:gravity="center_horizontal|right"
        android:paddingRight="10dp"
        android:text="@string/one_key_login"
        android:textColor="@color/yellow"
        android:textSize="12sp" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_margin="20dp"
        android:id="@+id/social_indicator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <View
            android:layout_width="0dp"
            android:layout_height="1px"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="#ffffff" />

        <ImageView
            android:id="@+id/iv_social_indicator"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/ic_keyboard_arrow_up_white_24dp" />

        <TextView
            android:padding="5dp"
            android:id="@+id/tv_social_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/social_login"
            android:textColor="@color/lightgray"
            android:textSize="14sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="1px"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:background="#ffffff" />
    </LinearLayout>


    <LinearLayout
        android:layout_marginBottom="-100dp"
        android:id="@+id/container_social"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingRight="20dp"
        android:paddingBottom="20dp"
        android:paddingLeft="20dp">


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_login_qq"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_qq" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/qq"
                android:textColor="@color/white"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_login_wechat"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_wechat" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/wechat"
                android:textColor="@color/white"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_login_weibo"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_sinaweibo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/weibo"
                android:textColor="@color/white"
                android:textSize="12sp" />
        </LinearLayout>


    </LinearLayout>

</LinearLayout>