<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:gravity="center"
    android:layout_height="match_parent">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="5dp">

        <ImageView
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:src="@drawable/ic_phone" />

        <EditText
            android:id="@+id/et_phone_number"
            android:inputType="phone"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/shape_login_input"
            android:gravity="center"
            android:hint="@string/hint_account"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:textColorHint="@color/lightgray"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/iv_phone_input_clear"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center_vertical|right"
            android:layout_marginRight="10dp"
            android:src="@drawable/ic_input_cancle" />
    </FrameLayout>
    <TextView
        android:id="@+id/tv_phone_number_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:alpha="0.5"
        android:drawableRight="@drawable/ic_error_indicator"
        android:gravity="end|center_vertical"
        android:paddingRight="10dp"
        android:text="戳了哦"
        android:textColor="#d81e06"
        android:textSize="12sp"
        android:visibility="invisible" />

    <LinearLayout
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <FrameLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="5dp">

            <ImageView
                android:padding="1dp"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:src="@drawable/ic_sms_code" />

            <EditText
                android:id="@+id/et_sms_code"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/shape_login_input"
                android:gravity="center"
                android:hint="@string/sms_code"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:textColorHint="@color/lightgray"
                android:textSize="14sp" />

        </FrameLayout>
        <Button
            android:layout_marginRight="5dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text="@string/get_sms"
            android:id="@+id/btn_get_sms"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:background="@drawable/shape_login_input"
            android:gravity="center"
            android:textColor="@color/lightgray"
            android:textSize="14sp" />

    </LinearLayout>
    <TextView
        android:id="@+id/tv_sms_code_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:alpha="0.5"
        android:drawableRight="@drawable/ic_error_indicator"
        android:gravity="end|center_vertical"
        android:paddingRight="10dp"
        android:text="戳了哦"
        android:textColor="#d81e06"
        android:textSize="12sp"
        android:visibility="invisible" />

</LinearLayout>